# plexiglass

./: .aider.chat.history.md  .gitignore  .repomixignore  AGENTS.md  PROGRESS.md  README.md  SESSION_COMPLETE.md  pyproject.toml  repomix.config.json
.claude/: settings.json  statusline-script.sh
.claude/commands/repo/git/: difference-between-branch-and-main.md  merge.md  new-branch.md  what-has-changed.md
.opencode/command/: project-export-bmad-to-ralph.md  project-resume-progress-from-last-checkpoint.md  project-save-progress-to-checkpoint.md  repo-git-merge.md  repo-git-new-branch.md  repo-git-what-has-changed.md
.template_scripts/: synthetic-quotas.sh  task-template-schema.json  update-bmad-method.sh  update-opencode.sh  update-template-from-git.sh  validate_template.py  visualize_plan.py
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
config/: servers.example.yaml
docs/: API_FEATURES_MAP.md  ARCHITECTURE.md  LIVING_DOCS.md  SESSION_10_SUMMARY.md  SESSION_11_SUMMARY.md  SESSION_12_SUMMARY.md  SESSION_13_SUMMARY.md  SESSION_14_SUMMARY.md  SESSION_15_SUMMARY.md  SESSION_16_SUMMARY.md  SESSION_17_SUMMARY.md  SESSION_18_SUMMARY.md  SESSION_19_SUMMARY.md  SESSION_1_SUMMARY.md  SESSION_20_SUMMARY.md  SESSION_21_SUMMARY.md  SESSION_22_SUMMARY.md  SESSION_23_SUMMARY.md  SESSION_24_SUMMARY.md  SESSION_25_SUMMARY.md  SESSION_26_SUMMARY.md  SESSION_2_SUMMARY.md  SESSION_3_SUMMARY.md  SESSION_4_SUMMARY.md  SESSION_5_SUMMARY.md  SESSION_6_SUMMARY.md  SESSION_7_SUMMARY.md  SESSION_8_SUMMARY.md  SESSION_9_SUMMARY.md  THEMING_GUIDE.md
docs/tasks/: task-template-example.yaml  task-template.yaml
docs/workflows/export-to-ralph/: workflow.md
docs/workflows/export-to-ralph/steps/: step-01-detect-context.md  step-02-extract.md  step-03-transform.md  step-04-write-file.md
src/plex_test/: __init__.py
src/plexiglass/: __init__.py  __main__.py  sample.py
src/plexiglass/app/: __init__.py  plexiglass_app.py
src/plexiglass/config/: __init__.py  exceptions.py  loader.py  performance.py
src/plexiglass/gallery/: __init__.py  base_demo.py  lazy_loader.py  registry.py
src/plexiglass/gallery/demos/: __init__.py
src/plexiglass/gallery/demos/advanced/: __init__.py  (+2 more)
src/plexiglass/models/: __init__.py  undo_stack.py
src/plexiglass/services/: __init__.py  cache_service.py  error_handler.py  exceptions.py  help_content.py  keyboard_manager.py  server_manager.py  undo_service.py
src/plexiglass/ui/: __init__.py
src/plexiglass/ui/screens/: __init__.py  gallery_screen.py  help_screen.py
src/plexiglass/ui/styles/: category_menu.tcss  errors.tcss  gallery.tcss  help.tcss  loading.tcss  plexiglass.tcss  theme-light.tcss  theme.tcss
src/plexiglass/ui/widgets/: __init__.py  category_menu.py  code_viewer.py  demo_list.py  demo_parameters.py  error_modal.py  error_toast.py  loading_indicator.py  progress_bar.py  results_display.py  run_demo_button.py  scrollable_results.py  undo_button.py
src/plexiglass/utils/: memory_optimizer.py
tests/: __init__.py  conftest.py  test_sample.py
tests/unit/: test_advanced_demos.py  test_alerts_demos.py  test_analysis_demos.py  test_base_demo.py  test_cache_service.py  test_category_menu.py  test_category_menu_integration.py  test_code_viewer.py  test_code_viewer_integration.py  test_collections_list_collections_demo.py  test_collections_list_playlists_demo.py  test_config_loader.py  test_connection_pool.py  test_demo_list.py  test_demo_list_integration.py  test_demo_parameters.py  test_error_handler.py  test_error_widgets.py  test_gallery_flow_integration.py  test_gallery_navigation_integration.py  test_gallery_run_demo.py  test_gallery_run_demo_button_press.py  test_gallery_screen.py  test_gallery_screen_code_viewer_integration.py  test_gallery_screen_results_display_integration.py  test_gallery_screen_run_button_integration.py  test_gallery_screen_undo_button_integration.py  test_gallery_screen_undo_flow.py  test_get_server_info_demo.py  test_get_server_info_integration.py  test_global_search_demo.py  test_help_system.py  test_integrations_demos.py  test_keyboard_manager.py  test_lazy_loader.py  test_library_items_demo.py  test_library_search_demo.py  test_library_sections_demo.py  test_loading_widgets.py  test_media_list_artists_demo.py  (+31 more)
(+44 files in other folders)
