[project]
name = "plexiglass"
version = "0.1.0"
description = "PlexiGlass - A colorful Textual TUI dashboard and feature gallery for Plex Media Servers"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Tim", email = "tim@example.com"}
]
license = {text = "MIT"}
keywords = ["plex", "textual", "tui", "dashboard", "media-server", "plexapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "PlexAPI>=4.17.2",
    "textual>=7.3.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
plexiglass = "plexiglass.__main__:main"

[project.urls]
Homepage = "https://github.com/yourusername/plexiglass"
Documentation = "https://github.com/yourusername/plexiglass/blob/main/docs/LIVING_DOCS.md"
Repository = "https://github.com/yourusername/plexiglass"
Issues = "https://github.com/yourusername/plexiglass/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.24.0",
    "textual-dev>=1.6.1",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
